--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ kotlinxCollectionsImmutable = "0.3.8"
 ktor = "3.0.0"
 lifecycleRuntimeKtx = "2.8.6"
 logbackAndroid = "3.0.0"
-markwon = "4.6.2"
+mmr = "0.29.0"
 material3Icons = "1.7.4"
 media3 = "1.4.1"
 paging = "3.3.2"
@@ -67,8 +67,6 @@ ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 logback-android = { group = "com.github.tony19", name = "logback-android", version.ref = "logbackAndroid" }
-markwon-core = { group = "io.noties.markwon", name = "core", version.ref = "markwon"}
-markwon-recycler = { group = "io.noties.markwon", name = "recycler", version.ref = "markwon"}
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material3Icons" }
 media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
 media3-datasource = { group = "androidx.media3", name = "media3-datasource", version.ref = "media3"}
@@ -84,6 +82,8 @@ telephoto = { group = "me.saket.telephoto", name = "zoomable-image-coil", versio
 textflow = { group = "io.github.oleksandrbalan", name = "textflow-material3", version.ref = "textflow" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+multiplatform-markdown-renderer-android = { group = "com.mikepenz", name = "multiplatform-markdown-renderer-android", version.ref = "mmr"}
+multiplatform-markdown-renderer-m3 = { group = "com.mikepenz", name = "multiplatform-markdown-renderer-m3", version.ref = "mmr"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
