--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 activityCompose = "1.9.3"
 agp = "8.7.1"
-coil = "3.0.0-rc01"
+coil = "3.1.0"
 composeBom = "2024.10.00"
 composeNavigation = "2.8.3"
 composeSettings = "2.6.0"
