--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ junitJupiter = "5.13.3"
 appcompat = "1.7.1"
 nav3Core = "1.0.0-alpha05"
 lifecycleViewmodelNav3 = "1.0.0-alpha03"
+windowSizeClass = "1.8.2"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -89,6 +90,7 @@ multiplatform-markdown-renderer-coil3 = { group = "com.mikepenz", name = "multip
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
 androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
+material3-windowsizeclass = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "windowSizeClass"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
